--- a/beermoney/app/templates/checkin.html
+++ b/beermoney/app/templates/checkin.html
@@ -8,7 +8,7 @@
         </style>
     </head>
     <body>
-        <h1>find beers. cheap as fuck.</h1>
+        <h1>find beers. cheap.</h1>
         <form id="beerIt" action="/checkin/drink/" method="get">
             <input name="location" placeholder="where are you?" type="text" />
             <input name="drink" placeholder="what're you drinkin?" type="text" />
