Lots to commit: -gitignore file -DAO to sorta deal with transaction stuff - Models - HTML
*NEEDED*
- DB schema that doesn't expose password info. env vars to come next when I'm not kinda hammered

--- a/beermoney/app/templates/checkin.html
+++ b/beermoney/app/templates/checkin.html
@@ -1,17 +1,25 @@
 {% extends "base.html" %}
     {% block content %}
-        {% if user %}
-            <h1>what're we drinkin tonight {{user.nickname}}</h1>
-        {% else %}
-            <h1>find beers. cheap.</h1>
-        {% endif %}
-        <form id="beerIt" action="/checkin/drink/" method="get">
-            <label for="location">where are you?</label>
-                <input name="location" type="text" />
-            <label for="drink">what're you drinkin?</label>
-                <input name="drink" type="text" />
-            <label for="price">how much is that shit?</label>
-                $<input name="" type="number" />
-            <button type="submit">bling bling</button>
-        </form>
+        <div id="checkin-container">
+            {% if user %}
+                <h1>what're we drinkin tonight {{user.nickname}}?</h1>
+            {% else %}
+                <h1>find beers. cheap.</h1>
+            {% endif %}
+            <form id="beerIt" action="/checkin/drink/" method="get">
+                <div class="info">
+                    <label for="location">where are you?</label>
+                    <input name="location" type="text" />
+                </div>
+               <div class="info">
+                   <label for="drink">what're you drinkin?</label>
+                   <input name="drink" type="text" />
+               </div>
+               <div class="info">
+                   <label for="price">how much is it?</label>
+                   $<input name="" type="text" pattern="\d*" />
+               </div>
+                <button type="submit">bling bling</button>
+            </form>
+        </div>
     {% endblock %}
