--- a/beermoney/app/templates/base.html
+++ b/beermoney/app/templates/base.html
@@ -1,38 +1,26 @@
 <html>
     <head>
         <title>{{title}} - beermoney</title>
-        <style>
-            input[type="text"]{
-                width: 350px;
-                clear:both;
-            }
-            label{
-                font-size:32px;
-                clear:both;
-            }
-            #errors{
-                position:absolute;
-                z-index: 100;
-                list-style-type: none;
-            }
-            #errors ul{
-                list-style-type: none;
-            }
-        </style>
+        <script type="text/javascript" src="{{url_for('static', filename='js/jquery-2.1.3.min.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='js/handlebars-v3.0.0.js')}}"></script>
+        <script type="text/javascript" src="{{url_for('static', filename='js/app.js')}}"></script>
+        <link rel="stylesheet" media="not print" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
         {% block header%}{% endblock %}
     </head>
     <body>
-        <div id="errors">
-            {% with messages = get_flashed_messages() %}
-              {% if messages %}
-                <ul>
-                {% for message in messages %}
-                    <li>{{ message }} </li>
-                {% endfor %}
-                </ul>
-              {% endif %}
-            {% endwith %}
-        </div>
+        <div class="container">
+            <div id="errors">
+                {% with messages = get_flashed_messages() %}
+                  {% if messages %}
+                    <ul>
+                    {% for message in messages %}
+                        <li>{{ message }} </li>
+                    {% endfor %}
+                    </ul>
+                  {% endif %}
+                {% endwith %}
+            </div>
         {% block content %}{% endblock %}
+        </div>
     </body>
 </html>
