get small foursquare query working for results

--- a/beermoney/app/static/css/style.css
+++ b/beermoney/app/static/css/style.css
@@ -76,7 +76,8 @@ body{
     }
 
     .login,
-    .register{
+    .register,
+    .search-results{
         position: absolute;
         top: calc(50% - 75px);
         left: calc(50% - 50px);
